fix: css spacing

--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@
 .mainparagraph{
   color:#2B2D37;
   text-align: center;
-  width: 80%;
+  width: 65%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -89,7 +89,7 @@
   position: fixed;
   /*top: 275px;*/
   /* top: 60px;*/
-  bottom: 10px;
+  /* bottom: 10px;*/
   z-index: 1;
   /* margin-left: 0; */
   margin-left: 110px;
